<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/small_margin"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_news"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen100dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/title_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/qs_bold"
                    android:text="@string/default_judul"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date_news"
                    android:fontFamily="@font/qs_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_tanggal"
                    android:textSize="@dimen/text12sp"
                    android:textStyle="italic" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/dark_grey_002" />

            <TextView
                android:id="@+id/author_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:fontFamily="@font/qs_bold"
                android:padding="@dimen/dimen10dp"
                android:text="@string/default_name"
                android:textColor="@color/dark_grey_002"
                android:textSize="@dimen/text13sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>